# python-meta-names-project-package-dev-directory

./: MANIFEST.in  README.md  setup.cfg
src/module_bundle_package/: __main__.py  sole_module.py
