[metadata]
name = meta-names-project_package
version = 0.0.1
author = Jim Ratliff
author_email = jim@jim-ratliff.name
description = Meta-python exercise to tease out the distinctions between the various uses of names for a project, package, and module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jimratliff/python-meta-names-project-package
project_urls =
    Bug Tracker = https://github.com/jimratliff/python-meta-names-project-package/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers 

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[bdist_wheel]
python-tag = py39